UserId changet to username

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/Articles.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/Articles.razor
@@ -37,7 +37,7 @@ else
                         </p>
 
                         <p class="text-muted small mt-3 mb-2">
-                            👤 @article.UserId <br />
+                            👤 @article.UserName <br />
                             📅 Created: @article.CreatedAt.ToShortDateString() <br />
                             🛠️ @(article.UpdatedAt?.ToShortDateString() ?? "not edited yet")
                         </p>
