--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/Articles.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/Articles.razor
@@ -28,7 +28,7 @@ else
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-primary">@article.Title</h5>
                         <h6 class="card-subtitle mb-2 text-muted">
-                            @* Category: @article.ArticleCategoryName *@
+                            Category: @article.ArticleCategoryName
                         </h6>
 
                         <!-- Truncated description -->
