--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
@@ -16,7 +16,18 @@ else
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">@article.Title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">By @article.UserId</h6>
+            <h6 class="card-subtitle mb-2 text-muted">
+                By @article.UserName | Category: @article.ArticleCategoryName
+            </h6>
+            <h6 class="card-subtitle mb-2 text-muted">
+                Created: @article.CreatedAt
+            </h6>
+            @if (@article.UpdatedAt != null) 
+            {
+                <h6 class="card-subtitle mb-2 text-muted">
+                    Updated:  @article.UpdatedAt
+                </h6>
+            }
             <p class="card-text">@article.Description</p>
 
             <div class="mt-3">
@@ -26,6 +37,7 @@ else
         </div>
     </div>
 }
+
 
 @code {
     [Parameter]
