--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
@@ -25,7 +25,7 @@ else
             @if (@article.UpdatedAt != null) 
             {
                 <h6 class="card-subtitle mb-2 text-muted">
-                    Updated:  @article.UpdatedAt
+                    Edited:  @article.UpdatedAt
                 </h6>
             }
             <p class="card-text">@article.Description</p>
