the admin's power now can change the user's role

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
@@ -18,8 +18,10 @@
             <!-- Auth buttons -->
             <AuthorizeView>
                 <Authorized>
-                    <NavLink href="/profile" class="btn btn-outline-primary">Profile</NavLink>
-                    <LogoutButton />
+                    <div class="text-end">
+                        <NavLink href="/profile" class="btn btn-outline-primary">Profile</NavLink>
+                        <LogoutButton />
+                    </div>
                 </Authorized>
                 <NotAuthorized>
                     <div class="text-end">
