added create option for editing article

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/NameEdit.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/NameEdit.razor
@@ -30,7 +30,7 @@
 @code {
     private string userName;
     private bool isEditing = false;
-    private string originalUserName;
+    private string originalUserName = null!;
     [Inject] private NavigationManager Navigation { get; set; } = null!;
 
     protected override async Task OnInitializedAsync()
