--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleEdit.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleEdit.razor
@@ -4,6 +4,8 @@
 @using TicketingSystemFrontend.Client.Requests
 @using TicketingSystemFrontend.Client.Services.Interfaces
 @inject IArticleService ArticleService
+@inject IArticleCategoryService ArticleCategoryService
+
 @inject NavigationManager Navigation
 
 <h3>Edit Article</h3>
@@ -55,7 +57,7 @@ else
     private ArticleUpdateRequest articleEditRequest = new();
     protected override async Task OnInitializedAsync()
     {
-        categories = await ArticleService.GetAllArticleCategoriesAsync();
+        categories = await ArticleCategoryService.GetAllArticleCategoriesAsync();
     }
 
     protected override async Task OnParametersSetAsync()
