--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/Home.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @using TicketingSystemFrontend.Client.DTOs
 @using TicketingSystemFrontend.Client.Services.Interfaces
-@inject ITicketService TicketService
+@inject ITicketCrudService TicketService
 
 <PageTitle>Tickets</PageTitle>
 
