--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
@@ -2,8 +2,9 @@
 
 @using TicketingSystemFrontend.Client.DTOs
 @using TicketingSystemFrontend.Client.Requests
+@using TicketingSystemFrontend.Client.Requests.Commands.Articles
 @using TicketingSystemFrontend.Client.Services.Interfaces
-@inject IArticleService ArticleService
+@inject IArticleCrudService ArticleService
 @inject NavigationManager Navigation
 
 <h3>Create New Article</h3>
@@ -42,7 +43,7 @@
 </EditForm>
 
 @code {
-    private ArticleCreateRequest newArticle = new();
+    private CreateArticleCommand newArticle = new();
     private List<ArticleCategoryDto> categories = [];
 
     protected override async Task OnInitializedAsync()
