--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleEdit.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleEdit.razor
@@ -2,8 +2,9 @@
 
 @using TicketingSystemFrontend.Client.DTOs
 @using TicketingSystemFrontend.Client.Requests
+@using TicketingSystemFrontend.Client.Requests.Commands.Articles
 @using TicketingSystemFrontend.Client.Services.Interfaces
-@inject IArticleService ArticleService
+@inject IArticleCrudService ArticleService
 @inject NavigationManager Navigation
 
 <h3>Edit Article</h3>
@@ -52,7 +53,7 @@ else
     private List<ArticleCategoryDto> categories = [];
 
     private ArticleDto? article;
-    private ArticleUpdateRequest articleEditRequest = new();
+    private UpdateArticleCommand articleEditRequest = new();
     protected override async Task OnInitializedAsync()
     {
         categories = await ArticleService.GetAllArticleCategoriesAsync();
