--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/Articles.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/Articles.razor
@@ -2,7 +2,7 @@
 @using TicketingSystemFrontend.Client.DTOs
 @using TicketingSystemFrontend.Client.Services.Interfaces
 
-@inject IArticleService ArticleService
+@inject IArticleCrudService ArticleService
 @inject NavigationManager Navigation
 
 <h3 class="mb-4 d-flex justify-content-between align-items-center">
