--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketCreate.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketCreate.razor
@@ -55,8 +55,10 @@
 
         <div class="col-md-6">
             <label for="file" class="form-label">Attachment (optional)</label>
-            <InputFile OnChange="HandleFileChange" />
+            <InputFile OnChange="HandleFileChange" multiple/>
         </div>
+
+
     </div>
 
 
