article interface abstracted

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
@@ -54,7 +54,7 @@
 
     private async Task HandleValidSubmit()
     {
-        await ArticleService.CreateArticleAsync(newArticle);
+        await ArticleService.CreateAsync(newArticle);
         Navigation.NavigateTo("/articles");
     }
 
