Revert "add Interfaces to services, add .. I did so many changes that I could not list/remeber them"
This reverts commit b36668211d6a105fff09f4ddc6b25fe2bea914a0.

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/Home.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @using TicketingSystemFrontend.Client.DTOs
 @using TicketingSystemFrontend.Client.Services.Interfaces
-@inject ITicketCrudService TicketService
+@inject ITicketService TicketService
 
 <PageTitle>Tickets</PageTitle>
 
