--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
@@ -2,9 +2,8 @@
 
 @using TicketingSystemFrontend.Client.DTOs
 @using TicketingSystemFrontend.Client.Requests
-@using TicketingSystemFrontend.Client.Requests.Commands.Articles
 @using TicketingSystemFrontend.Client.Services.Interfaces
-@inject IArticleCrudService ArticleService
+@inject IArticleService ArticleService
 @inject NavigationManager Navigation
 
 <h3>Create New Article</h3>
@@ -43,7 +42,7 @@
 </EditForm>
 
 @code {
-    private CreateArticleCommand newArticle = new();
+    private ArticleCreateRequest newArticle = new();
     private List<ArticleCategoryDto> categories = [];
 
     protected override async Task OnInitializedAsync()
