--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleEdit.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleEdit.razor
@@ -2,9 +2,8 @@
 
 @using TicketingSystemFrontend.Client.DTOs
 @using TicketingSystemFrontend.Client.Requests
-@using TicketingSystemFrontend.Client.Requests.Commands.Articles
 @using TicketingSystemFrontend.Client.Services.Interfaces
-@inject IArticleCrudService ArticleService
+@inject IArticleService ArticleService
 @inject NavigationManager Navigation
 
 <h3>Edit Article</h3>
@@ -53,7 +52,7 @@ else
     private List<ArticleCategoryDto> categories = [];
 
     private ArticleDto? article;
-    private UpdateArticleCommand articleEditRequest = new();
+    private ArticleUpdateRequest articleEditRequest = new();
     protected override async Task OnInitializedAsync()
     {
         categories = await ArticleService.GetAllArticleCategoriesAsync();
