Adapt Crud interfaces to inherit from ICrudService

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
@@ -52,7 +52,7 @@ else
 
     private async Task DeleteArticle()
     {
-        var success = await ArticleService.DeleteAsync(id);
+        var success = await ArticleService.DeleteByIdAsync(id);
         if (success)
         {
             Navigation.NavigateTo("/articles");
