--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/Components/App.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/Components/App.razor
@@ -11,6 +11,10 @@
     <ImportMap />
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet @rendermode="InteractiveWebAssembly" />
+
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+
 </head>
 
 <body class="">
