Adapt services, interfaces, Dtos, create necessary requests, Add TicketCommentService (NEED TO ADD RESPECTIVE FIELDS FOR BACKEND, as it only accepts comment Description!)

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
@@ -49,7 +49,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        categories = await ArticleCategoryService.GetAllArticleCategoriesAsync();
+        categories = await ArticleCategoryService.GetAllAsync();
     }
 
     private async Task HandleValidSubmit()
