reset migrations & rename methods

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketCreate.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketCreate.razor
@@ -36,7 +36,7 @@
                 }
             </InputSelect>
             <ValidationMessage For="@(() => ticketRequest.Category)" /> *@
-            <a class="btn btn-primary" href="/tickets/create/categories" @onclick="EditCategories">Edit Categories</a>
+            <a class="btn btn-primary" href="/tickets/create/categories" >Edit Categories</a>
 
         </div>
 
