--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
@@ -22,6 +22,7 @@ else
             <h6 class="card-subtitle mb-2 text-muted">
                 Created: @article.CreatedAt
             </h6>
+
             @if (@article.UpdatedAt != null) 
             {
                 <h6 class="card-subtitle mb-2 text-muted">
@@ -29,6 +30,24 @@ else
                 </h6>
             }
             <p class="card-text">@article.Description</p>
+
+
+            <h6>Attachments:</h6>
+            @if (articleFiles.Count == 0)
+            {
+                <p><em>No files attached.</em></p>
+            }
+            else
+            {
+                <ul>
+                    @foreach (var f in articleFiles)
+                    {
+                        <li>
+                            <a href="@($"/api/articles/{id}/files/{f.Id}")" target="_blank">File @f.Id</a>
+                        </li>
+                    }
+                </ul>
+            }
 
             <div class="mt-3">
                 <a class="btn btn-primary me-2" href="/articles/edit/@id">Update</a>
@@ -45,9 +64,12 @@ else
 
     private ArticleDto? article;
 
+    private List<ArticleFileDto> articleFiles = new();
+
     protected override async Task OnParametersSetAsync()
     {
         article = await ArticleService.GetByIdAsync(id);
+        articleFiles = await ArticleService.GetFilesAsync(id);
     }
 
     private async Task DeleteArticle()
