on front download files without authorization works. can be delegated

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleCreate.razor
@@ -103,7 +103,7 @@
             }
 
             // Navigate after successful save
-            Navigation.NavigateTo("/articles");
+            Navigation.NavigateTo($"/articles/{articleId}");
         }
         catch (Exception ex)
         {
