--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/Components/App.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/Components/App.razor
@@ -23,6 +23,7 @@
     </CascadingAuthenticationState>
     <script src="_framework/blazor.web.js"></script>
     <script src="js/cookies.js"></script>
+    <script src="js/downloadFile.js"></script>
 </body>
 
 </html>
