--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/Articles.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/Articles.razor
@@ -23,6 +23,7 @@ else
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         @foreach (var article in articles)
         {
+            //Вытащить в отдельный компонент и вызвать его здесь {
             <div class="col">
                 <div class="card h-100 shadow-sm border-0">
                     <div class="card-body d-flex flex-column">
@@ -49,6 +50,7 @@ else
                     </div>
                 </div>
             </div>
+            //}
         }
     </div>
 }
