--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketCreate.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketCreate.razor
@@ -1,4 +1,6 @@
 ﻿@page "/tickets/create"
+
+@using MudBlazor
 @using System.ComponentModel.DataAnnotations
 @using TicketingSystemFrontend.Client.DTOs
 @using TicketingSystemFrontend.Client.Requests
@@ -29,14 +31,14 @@
         <div class="col-md-6">
             <label for="category" class="form-label">Category</label>
             @* TO CHANGE LATER *@
-            @* <InputSelect id="category" class="form-select" @bind-Value="ticketRequest.Category">
+            <InputSelect id="category" class="form-select" @bind-Value="ticketRequest.TicketCategoryId">
                 <option value="">-- Select --</option>
                 @foreach (var category in categories)
                 {
                     <option value="@category.Id">@category.CategoryName</option>
                 }
             </InputSelect>
-            <ValidationMessage For="@(() => ticketRequest.Category)" /> *@
+            <ValidationMessage For="@(() => ticketRequest.TicketCategoryId)" />
 
         </div>
 
@@ -61,10 +63,38 @@
             <ValidationMessage For="@(() => ticketRequest.Priority)" />
         </div>
 
-        <div class="col-md-6">
-            <label for="file" class="form-label">Attachment (optional)</label>
-            <InputFile OnChange="HandleFileChange" multiple/>
-        </div>
+        <MudPaper Class="col-md-6"
+                  Style="border:2px dashed var(--mud-palette-primary); min-height:150px; cursor:pointer"
+                  @ondrop="OnDrop"
+                  @ondragover:preventDefault>
+            <div>
+                <label for="files" class="form-label">Files</label>
+                <MudIcon Icon="@Icons.Material.Filled.CloudUpload" Size="Size.Large" Color="Color.Primary" />
+                <MudText Typo="Typo.subtitle1">Drag & drop files here or click below</MudText>
+                <InputFile OnChange="OnFilesChanged" multiple class="border" />
+            </div>
+        </MudPaper>
+
+        @if (files.Any())
+        {
+            <MudTable Items="files" Dense="true">
+                <HeaderContent>
+                    <MudTh>File Name</MudTh>
+                    <MudTh>Size (MB)</MudTh>
+                    <MudTh></MudTh>
+                </HeaderContent>
+                <RowTemplate Context ="newContext">
+                    <MudTd>@newContext.Name</MudTd>
+                    <MudTd>@(Math.Round(newContext.Size / 1024.0 / 1024.0, 2))</MudTd>
+                    <MudTd>
+                        <MudIconButton Icon="@Icons.Material.Filled.Delete"
+                                       Color="Color.Error"
+                                       OnClick="@(() => RemoveFile(newContext))" />
+                    </MudTd>
+                </RowTemplate>
+            </MudTable>
+            <MudText>Total size: @Math.Round(files.Sum(f => f.Size) / 1024.0 / 1024.0, 2) MB</MudText>
+        }
 
     </div>
 
@@ -80,7 +110,13 @@
 
 @code {
     private TicketCreateRequest ticketRequest = new();
-    private List<ArticleCategoryDto> categories = [];
+    private List<TicketCategoryDto> categories = [];
+    private List<IBrowserFile> files = new();
+
+    protected override async Task OnInitializedAsync()
+    {
+        categories = await TicketCategoryService.GetAllAsync();
+    }
 
     private async Task HandleValidSubmit()
     {
@@ -89,6 +125,7 @@
             Title = ticketRequest.Title,
             Description = ticketRequest.Description,
             Priority = ticketRequest.Priority,
+            TicketCategoryId = ticketRequest.TicketCategoryId
         };
 
         try
@@ -107,6 +144,21 @@
         var file = e.File;
         Console.WriteLine($"File selected: {file.Name} ({file.Size} bytes)");
         // TODO: Save to backend or buffer
+    }
+
+    private void OnDrop(DragEventArgs e)
+    {
+        // Prevent default browser behavior
+    }
+
+    private void OnFilesChanged(InputFileChangeEventArgs e)
+    {
+        files.AddRange(e.GetMultipleFiles());
+    }
+
+    private void RemoveFile(IBrowserFile file)
+    {
+        files.Remove(file);
     }
 
     public class TicketInputModel
